--- a/komunat/src/app/cdetail/cdetail.page.scss
+++ b/komunat/src/app/cdetail/cdetail.page.scss
@@ -63,10 +63,12 @@ ion-slide {
 }
 
 .vertical-center {
+    line-height: 100%;
     margin: 0;
     padding: 0;
     position: absolute;
-    top: 30%;
+    top: 50%;
+    vertical-align: middle;
     -ms-transform: translateY(-50%,-50%);
     transform: translateY(-50%,-50%);
   }
