--- a/komunat/src/app/matches/matches.page.html
+++ b/komunat/src/app/matches/matches.page.html
@@ -21,7 +21,7 @@
         <ion-col size="3">
           <div class="cCardLeft">
               <div class="percentage">
-                100 % 
+                {{match.distance}}
               </div> 
             </div>
         </ion-col>
@@ -36,13 +36,13 @@
         </ion-col>
       </ion-row>
       <ion-row class="nameRow">
-          <p class="c_name">{{match.candidate.name}}, <span class="slim">30</span></p>
+          <p class="c_name">{{match.name}}, <span class="slim">{{match.birthdate}}</span></p>
       </ion-row>
       <ion-row class="fullHeight">
         <ion-col class="fullHeight" size="3">
           <div class="cCardLeft">
               <ion-avatar>
-                  <img src="https://komunat.de/uploads/00uk7chs5hDiBJLyb0h7.png"/>
+                  <img src="https://komunat.de/uploads/{{match.uuid}}.png"/>
                 </ion-avatar>
           </div>
         </ion-col>
@@ -54,9 +54,9 @@
 
           <div class="cCardRight">
             <div class="c_info">
-              <p class="slim c_info_text">Liste: <span class="bold">{{match.candidate.list}}</span></p>
-              <p class="slim c_info_text">Listenplatz: <span class="bold">{{match.candidate.list_number}}</span></p>
-              <p class="slim c_info_text">Stadtbezirk: <span class="bold">{{match.candidate.district}}</span></p>     
+              <p class="slim c_info_text">Liste: <span class="bold">{{match.list}}</span></p>
+              <p class="slim c_info_text">Listenplatz: <span class="bold">{{match.list_number}}</span></p>
+              <p class="slim c_info_text">Stadtbezirk: <span class="bold">{{match.district}}</span></p>     
           </div>       
           </div>
           <div class="detailArrow">
@@ -78,46 +78,64 @@
 
 <div *ngIf="SHOW_STATE == 2"  class="content">
     <div @items *ngFor="let s of substitutes; let i = index" class="animated fadeInRight delay-{{ i }}s match_{{ i }}">
-      <ion-card class="candidateCard" (click) ="showDetails(i)">
-        <ion-row class="fullHeight">
-          <ion-col class="fullHeight" size="3">
-            <div class="cCardLeft">
-              <div class="percentage">
-                100 %
+      
+        <ion-card class="candidateCard">
+            <ion-row class="iconRow">
+              <ion-col size="3">
+                <div class="cCardLeft">
+                    <div class="percentage">
+                        {{s.distance}}
+                    </div> 
+                  </div>
+              </ion-col>
+      
+              <ion-col size="6">
+      
+              </ion-col>
+              <ion-col size="1">
+                  <div class="readd" (click)="backToMatches(0,i)">
+                      <ion-icon name="checkmark-circle"></ion-icon>
+                  </div>
+              </ion-col>
+            </ion-row>
+            <ion-row class="nameRow">
+                <p class="c_name">{{match.candidate.name}}, <span class="slim">30</span></p>
+            </ion-row>
+            <ion-row class="fullHeight">
+              <ion-col class="fullHeight" size="3">
+                <div class="cCardLeft">
+                    <ion-avatar>
+                        <img src="https://komunat.de/uploads/{{match.uuid}}.png"/>
+                      </ion-avatar>
+                </div>
+              </ion-col>
+              <ion-col size="1">
+      
+              </ion-col>
+      
+              <ion-col size="7">
+      
+                <div class="cCardRight">
+                  <div class="c_info">
+                    <p class="slim c_info_text">Liste: <span class="bold">{{match.candidate.list}}</span></p>
+                    <p class="slim c_info_text">Listenplatz: <span class="bold">{{match.candidate.list_number}}</span></p>
+                    <p class="slim c_info_text">Stadtbezirk: <span class="bold">{{match.candidate.district}}</span></p>     
+                </div>       
+                </div>
+                <div class="detailArrow">
+                    <ion-icon name="arrow-dropright"></ion-icon>
+                </div>
+              </ion-col>
+            </ion-row>
+            <div class="lefttopclickable" (click) ="showDetails(i)">
               </div>
-                <ion-avatar>
-                    <img src="https://komunat.de/uploads/00uk7chs5hDiBJLyb0h7.png"/>
-                  </ion-avatar>
-            </div>
-  
-          </ion-col>
-          <ion-col size="1">
-  
-          </ion-col>
-  
-          <ion-col size="7">
-  
-            <div class="cCardRight">
-              <p class="c_name">S. SCHULDIS, <span class="slim">30</span></p>
-              <div class="c_info">
-                <p class="slim c_info_text">Liste: <span class="bold">Unsere Zukunft</span></p>
-                <p class="slim c_info_text">Listenplatz: <span class="bold">79</span></p>
-                <p class="slim c_info_text">Stadtbezirk: <span class="bold">Stuttgart-West</span></p>     
-            </div>       
-            </div>
-  
-            <div class="readd" (click)="backToMatches(0,i)">
-                <ion-icon name="checkmark-circle"></ion-icon>
-            </div>
-            <div class="detailArrow">
-                <ion-icon name="arrow-dropright"></ion-icon>
-            </div>
-          </ion-col>
-        </ion-row>
-      </ion-card>
+            <div class="clickable" (click) ="showDetails(i)">
+              </div>
+          </ion-card>
+
+
     </div>
   </div>
-
   <div class="tutorial" *ngIf="NO_TUTORIAL==false">
     <ion-slides zoom="false" pager="true">
         <ion-slide>
