--- a/komunat/src/app/matches/matches.page.scss
+++ b/komunat/src/app/matches/matches.page.scss
@@ -22,6 +22,10 @@
     
 }
 
+.grayed {
+  background-color: var(--komunat-gray-light);
+}
+
 .clickable {
   position: absolute;
   top:25%;
@@ -225,6 +229,16 @@ You can also target devices with aspect ratio. */
 
 .content {
     margin-bottom: 100px;
+}
+
+.loadBtn {
+  margin-bottom: 100px;
+}
+
+.divider {
+  border-color: var(--komunat-gray-dark);
+  margin-top: -60px;
+  margin-bottom: 80px;
 }
 
 .footer {
