--- a/komunat/src/app/cdetail/cdetail.page.html
+++ b/komunat/src/app/cdetail/cdetail.page.html
@@ -13,7 +13,7 @@
         <ion-col size="5" class="imageCol">
           <div class="cCardLeft">
               <ion-avatar>
-                  <img src="https://komunat.de/portal/uploads/{{candidate.uuid}}.png"/>
+                  <img src="https://komunat.de/uploads/{{candidate.uuid}}.png"/>
                 </ion-avatar>
           </div>
         </ion-col>
