--- a/komunat/src/app/app.component.html
+++ b/komunat/src/app/app.component.html
@@ -3,7 +3,7 @@
       <ion-toolbar>
           <ion-buttons slot="primary">
           </ion-buttons>
-          <ion-title><img class="logo" src="../../assets/img/logo.png"/></ion-title>
+          <ion-title><img class="logo" src="https://komunat.de/app/assets/img/logo.png"/></ion-title>
           <ion-buttons slot="end">
             <ion-menu-button class="menu" autoHide="false"></ion-menu-button>
           </ion-buttons>
