--- a/komunat/src/app/matches/matches.page.html
+++ b/komunat/src/app/matches/matches.page.html
@@ -42,7 +42,7 @@
         <ion-col class="fullHeight" size="3">
           <div class="cCardLeft">
               <ion-avatar>
-                  <img src="https://komunat.de/portal/uploads/{{match.uuid}}.png"/>
+                  <img src="https://komunat.de/uploads/{{match.uuid}}.png"/>
                 </ion-avatar>
           </div>
         </ion-col>
@@ -146,7 +146,7 @@
         <ion-col class="fullHeight" size="3">
           <div class="cCardLeft">
               <ion-avatar>
-                  <img src="https://komunat.de/portal/uploads/{{match.uuid}}.png"/>
+                  <img src="https://komunat.de/uploads/{{match.uuid}}.png"/>
                 </ion-avatar>
           </div>
         </ion-col>
@@ -261,7 +261,7 @@
               <ion-col class="fullHeight" size="3">
                 <div class="cCardLeft">
                     <ion-avatar>
-                        <img src="https://komunat.de/portal/uploads/{{s.uuid}}.png"/>
+                        <img src="https://komunat.de/uploads/{{s.uuid}}.png"/>
                       </ion-avatar>
                 </div>
               </ion-col>
