[KMT] Added long hanging fruits

--- a/komunat/src/app/home/home.page.html
+++ b/komunat/src/app/home/home.page.html
@@ -17,7 +17,7 @@
         <img class="instruction" src="../../assets/img/placeholder.png">
         <h2>Jetzt bist du dran!</h2>
         <p>
-          Vergleiche die Werte und Aufgaben, die dir wichtig sind, mit Antowrten der KandidatInnen.
+          Vergleiche die Werte und Aufgaben, die dir wichtig sind, mit Antworten der KandidatInnen.
         </p>
           <ion-button (click) ="goToKomunat($event)" color="primary" expand="block" class="goBtn">Los geht's</ion-button>
           <br>
