[KMT] fixed pdf container

--- a/komunat/src/app/matches/matches.page.html
+++ b/komunat/src/app/matches/matches.page.html
@@ -1,4 +1,4 @@
-<ion-content>
+<ion-content id="teamList">
 
 <div class="container" id="teamList">
   <ion-row class="titleBar">
@@ -249,7 +249,7 @@
               </ion-col>
               <ion-col size="1">
                   <div class="readd" (click)="backToMatches(0,i)">
-                      <ion-icon name="checkmark-circle"></ion-icon>
+                      <ion-icon name="git-compare"></ion-icon>
                   </div>
               </ion-col>
             </ion-row>
