--- a/komunat/src/app/home/home.page.html
+++ b/komunat/src/app/home/home.page.html
@@ -3,9 +3,9 @@
    <ion-slide>
      <div class="swiper">
        <img class="instruction" src="../../assets/img/placeholder.png">
-       <h2>Stelle dein Team auf!</h2>
+       <h2>Dein Team für den Stuttgarter Gemeinderat!</h2>
        <p>
-         Finde mit dem Komunat heraus, wer deine Top 20 KandidatInnen für die Komunalwahl 2019 in Stuttgart sind.
+        Finde mit dem KOMUNAT heraus, wer deine TOP-KandidatInnen für die Gemeinderatswahl in Stuttgart am 26. Mai 2019 sind.
        </p>
          <ion-button (click) ="slideToNext()" color="primary" expand="block" class="goBtn">Weiter</ion-button>
          <br>
@@ -15,9 +15,9 @@
    <ion-slide>
        <div class="swiper">
         <img class="instruction" src="../../assets/img/placeholder.png">
-        <h2>Jetzt bist du dran!</h2>
+        <h2>Jetzt geht´s los!</h2>
         <p>
-          Vergleiche die Werte und Aufgaben, die dir wichtig sind, mit Antworten der KandidatInnen.
+          Vergleiche die Werte und kommunalpolitischen Aufgaben, die dir wichtig sind, mit den Antworten der KandidatInnen.
         </p>
           <ion-button (click) ="goToKomunat($event)" color="primary" expand="block" class="goBtn">Los geht's</ion-button>
           <br>
