--- a/komunat/src/app/loading/loading.page.html
+++ b/komunat/src/app/loading/loading.page.html
@@ -5,9 +5,8 @@
     <div class="nextText">
         <p class="gray slim">Mach dich bereit!</p>
         <br>
-        <h2 class="slim">We proudly present</h2>
-
-        <h2>Dein Team mit deinen Top 20 KandidatInnen</h2>
+        <h2 class="slim">Geschafft!</h2>
+        <h2>Schau dir jetzt dein Team für den Gemeinderat genauer an.</h2>
         </div>
     <div class="spinner">
         <div class="cube1"></div>
