--- a/komunat/src/app/matches/matches.page.html
+++ b/komunat/src/app/matches/matches.page.html
@@ -373,7 +373,9 @@
               <br>
                   <h5 class="white">
                     Die entfernten KandidatInnen findest du nach dem Aussortieren auf der Ersatzbank wieder.<br>
-                    Du kannst sie jederzeit mit <ion-icon class="blue rejectIcon" name="git-compare"></ion-icon>  wieder hinzufügen. Dabei rutschen die unteren KandidatInnen wieder aus deiner Liste.
+                    Du kannst sie jederzeit mit <ion-icon class="blue rejectIcon" name="git-compare"></ion-icon>  
+                    <br><br>
+                    wieder hinzufügen. Dabei rutschen die unteren KandidatInnen wieder aus deiner Liste.
                   </h5>
                 <ion-row class="tutBtn">
                     <ion-col size=12>
@@ -385,7 +387,6 @@
     </ion-slides>
   </div>
 </div>
-
 
 <ion-footer padding *ngIf="NO_TUTORIAL==true">
     <h1 (click)="showEmailSend()" class="footer">Ergebnis herunterladen</h1>
