--- a/komunat/src/app/loading/loading.page.html
+++ b/komunat/src/app/loading/loading.page.html
@@ -3,9 +3,8 @@
         
     </div>
     <div class="nextText">
-        <p class="gray slim">Mach dich bereit!</p>
+        <p class="gray slim">Geschafft!</p>
         <br>
-        <h2 class="slim">Geschafft!</h2>
         <h2>Schau dir jetzt dein Team für den Gemeinderat genauer an.</h2>
         </div>
     <div class="spinner">
