--- a/komunat/src/app/share/share.page.html
+++ b/komunat/src/app/share/share.page.html
@@ -6,6 +6,7 @@
       <h2 class="slim">Geschafft!</h2>
       <h2>Lade dein Ergebnis herunter und geh wählen!</h2>
       <ion-button (click) ="download()" color="light" expand="block" class="goBtn">Herunterladen</ion-button>
+      <ion-button href="http://komunat.de" color="light" expand="block" class="goBtn">Neue Runde</ion-button>
       </div>
   <div class="spinner" [style.display]="spinnerVisible ? 'block' : 'none'">
       <div class="cube1"></div>
