[KMT] Added note for adding events soon

--- a/komunat/src/app/cdetail/cdetail.page.html
+++ b/komunat/src/app/cdetail/cdetail.page.html
@@ -69,21 +69,11 @@
           <div class="eventList">
               <h4>KOMM VORBEI & TRIFF MICH HIER PERSÖNLICH</h4>
               <br>
-              <div class="eventWrapper" *ngFor="let event of events; let i = index">
+              <div class="eventWrapper">
                 <div class="event">
                 <hr>
                   <ion-row class="eventTitle bold">
-                    <p>{{event.title}}</p>
-                  </ion-row>
-                  <ion-row class="eventContent">
-                    <ion-col size=5>
-                    <p class="black"><span class="slim">Datum: </span><span class="bold">{{event.date}}</span> </p>
-                    <p class="black"><span class="slim">Uhrzeit: </span><span class="bold">{{event.time}}</span></p>
-                    </ion-col>
-          
-                    <ion-col size="7">
-                      <p class="black"><span class="slim">Addresse: </span><span class="bold">{{event.location}}</span></p>
-                    </ion-col>
+                    <p>Bald verfügbar</p>
                   </ion-row>
                 </div>
               </div>
