[KMT] Move ga into ready platform

--- a/komunat/src/app/home/home.page.html
+++ b/komunat/src/app/home/home.page.html
@@ -4,8 +4,8 @@
      <div class="swiper">
        <h2>Dein Team für den Stuttgarter Gemeinderat!</h2>
        <p>
-        <span *ngIf="resultLength > 0">Schon <b>{{resultLength}}</b> haben mitgemacht.</span>
-        Finde auch du mit dem KOMUNAT heraus, wer deine TOP-KandidatInnen für die Gemeinderatswahl in Stuttgart am 26. Mai 2019 sind.
+        <!--<span *ngIf="resultLength > 0">Schon <b>{{resultLength}}</b> haben mitgemacht.</span>-->
+        Finde mit dem KOMUNAT heraus, wer deine TOP-KandidatInnen für die Gemeinderatswahl in Stuttgart am 26. Mai 2019 sind.
        </p>
          <ion-button (click) ="slideToNext()" color="primary" expand="block" class="goBtn">Weiter</ion-button>
          <br>
