[KMT] Added new entry pics

--- a/komunat/src/app/home/home.page.scss
+++ b/komunat/src/app/home/home.page.scss
@@ -7,6 +7,10 @@
    margin-top:10vh;
 }
 
+.logo {
+  height:30vh;
+}
+
 .goBtn
 {
   margin-top:10vh;
@@ -23,6 +27,7 @@
 h2 {
   font-family: 'Source Sans Pro', sans-serif;
   font-weight: bold;
+  font-size: 20px;
 }
 
 p {
@@ -30,4 +35,5 @@ p {
   margin-bottom: 10vh;
   margin-right:2vw;
   margin-left: 2vw;
+  font-size: 14px;
 }
