[KMT] fixed margin of last button

--- a/komunat/src/app/home/home.page.html
+++ b/komunat/src/app/home/home.page.html
@@ -43,7 +43,7 @@
          Wir vergleichen dein Ergebnis mit der Reihenfolge der KandidatInnen und zeigen dir, welche 20 der 300 KandidatInnen am besten zu dir passen.<br>
          Mit dem Ergebnis aus dem KOMUNAT kannst du dann ganz einfach den Stimmzettel ausfüllen.
        </p>
-         <ion-button (click) ="goToKomunat($event)" color="primary" expand="block" class="goBtn">Los geht's</ion-button>
+         <ion-button (click) ="goToKomunat($event)" color="primary" expand="block" class="goBtn small-margin">Los geht's</ion-button>
          <br>
      </div>
   </ion-slide>
